fixed z-index in body, collapse, about-page

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,8 @@ html {
     display: flex;
     flex-direction: column;
     overflow: auto;
+    position: relative;
+    z-index: -20;
 }
 
 .scroller {
@@ -90,7 +92,7 @@ html {
     display: flex;
     flex-direction: column;
     overflow: auto;
-
+    z-index: 1;
 }
 
 .page-main-content::before {
@@ -112,6 +114,7 @@ html {
     background-size: cover;
 
     background-attachment: fixed;
+    z-index: -19;
 }
 
 button {
@@ -161,7 +164,7 @@ button {
 }
 
 .accordion-collapse {
-    background-color: #000000;
+    background-color: rgba(0, 0, 0, 0.348);
 }
 
 
